Native platform added, mainly for static checks on CI.

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; ********************************************************************************
+; D1 Mini - Espressif 8266 - Programming via USB
+; ********************************************************************************
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini
@@ -19,3 +22,20 @@ lib_deps =
     WebSockets
 monitor_speed = 115200
 upload_speed = 921600
+
+; ********************************************************************************
+; Native desktop platform - Only for testing purposes
+; ********************************************************************************
+[env:test]
+platform = native
+build_flags =
+    -std=c++11
+    -DARDUINO=100
+    -DPROGMEM=
+    -DNATIVE
+lib_ignore =
+check_tool = cppcheck, clangtidy
+check_severity = high, medium
+check_flags =
+    cppcheck: --std=c++11 --suppress=noExplicitConstructor --suppress=unreadVariable --suppress=unusedFunction
+    clangtidy: --checks=-*,clang-analyzer-*,performance-*
