Increase number of static checks.

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,7 +35,7 @@ build_flags =
     -DNATIVE
 lib_ignore =
 check_tool = cppcheck, clangtidy
-check_severity = high, medium
+check_severity = low, medium, high
 check_flags =
-    cppcheck: --std=c++11 --suppress=noExplicitConstructor --suppress=unreadVariable --suppress=unusedFunction
-    clangtidy: --checks=-*,clang-analyzer-*,performance-*
+    cppcheck: --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable
+    clangtidy: --checks=-*,clang-analyzer-*,performance-*,portability-*
