--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,10 @@ name: CI
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on push events for all branches
+  # Triggers the workflow on pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ master, Playground ]
   pull_request:
     branches: [ master ]
 
