Static checks shall be done in src, lib and include folder.

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,3 +39,7 @@ check_severity = low, medium, high
 check_flags =
     cppcheck: --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable
     clangtidy: --checks=-*,clang-analyzer-*,performance-*,portability-*
+check_patterns =
+    ./include
+    ./src
+    ./lib
