If cppcheck fails, it shall return 1 to force CI abort.

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,7 @@ lib_ignore =
 check_tool = cppcheck, clangtidy
 check_severity = low, medium, high
 check_flags =
-    cppcheck: --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable
+    cppcheck: --error-exitcode=1 --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable
     clangtidy: --checks=-*,clang-analyzer-*,performance-*,portability-*
 check_patterns =
     ./include
