The CI shall abort for any doxygen warning.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,3 +45,8 @@ jobs:
         with:
           working-directory: './doc/doxygen'
           doxyfile-path: './Doxyfile'
+
+      - name: Check for doxygen warnings
+        run: |
+          cd ./doc/doxygen
+          ./checkForWarnings.sh
