--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install platformio
           platformio update
+
+      - name: Compile for target
+        run: platformio run --environment d1_mini
       
       - name: Perform static checks
         run: platformio check --environment test --skip-packages
