--- a/platformio.ini
+++ b/platformio.ini
@@ -36,7 +36,7 @@ lib_ignore =
 check_tool = cppcheck, clangtidy
 check_severity = low, medium, high
 check_flags =
-    cppcheck: --error-exitcode=1 --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable
+    cppcheck: --error-exitcode=1 --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable --suppress=unusedFunction
     clangtidy: --checks=-*,clang-analyzer-*,performance-*,portability-*
 check_patterns =
     ./include
