--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ board_build.filesystem = littlefs
 framework = arduino
 lib_deps =
     WebSockets
+monitor_filters = esp8266_exception_decoder
 monitor_speed = 115200
 upload_speed = 921600
 
