Platform and libs now with versions.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,13 @@
 ; D1 Mini - Espressif 8266 - Programming via USB
 ; ********************************************************************************
 [env:d1_mini]
-platform = espressif8266
+platform = espressif8266 @ ~4.1.0
 board = d1_mini
 board_build.flash_mode = dout
 board_build.filesystem = littlefs
 framework = arduino
 lib_deps =
-    WebSockets
+    links2004/WebSockets @ ~2.3.7
 monitor_filters = esp8266_exception_decoder
 monitor_speed = 115200
 upload_speed = 921600
