Platforms updated, static check configuration separated, number of static checks extended.

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[static_check_configuration]
+check_tool = cppcheck, clangtidy
+check_severity = low, medium, high
+check_flags =
+    cppcheck: --error-exitcode=1 --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable --suppress=unusedFunction --suppress=*:*/libdeps/*
+    clangtidy: --header-filter='' --checks=-*,clang-analyzer-*,performance-*,portability-*,readability-uppercase-literal-suffix,readability-redundant-control-flow --warnings-as-errors=-*,clang-analyzer-*,performance-*,portability-*,readability-uppercase-literal-suffix,readability-redundant-control-flow
+check_patterns =
+    include
+    src
+    lib
+check_skip_packages = yes
+
 ; ********************************************************************************
 ; D1 Mini - Espressif 8266 - Programming via USB
 ; ********************************************************************************
 [env:d1_mini]
-platform = espressif8266 @ ~4.1.0
+extends = static_check_configuration
+platform = espressif8266 @ ~4.2.0
 board = d1_mini
 board_build.flash_mode = dout
 board_build.filesystem = littlefs
@@ -27,19 +40,11 @@ upload_speed = 921600
 ; Native desktop platform - Only for testing purposes
 ; ********************************************************************************
 [env:test]
-platform = native
+extends = static_check_configuration
+platform = native @ ~1.2.1
 build_flags =
     -std=c++11
     -DARDUINO=100
     -DPROGMEM=
     -DNATIVE
 lib_ignore =
-check_tool = cppcheck, clangtidy
-check_severity = low, medium, high
-check_flags =
-    cppcheck: --error-exitcode=1 --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable --suppress=unusedFunction
-    clangtidy: --checks=-*,clang-analyzer-*,performance-*,portability-*
-check_patterns =
-    ./include
-    ./src
-    ./lib
