--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 check_tool = cppcheck, clangtidy
 check_severity = low, medium, high
 check_flags =
-    cppcheck: --error-exitcode=1 --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable --suppress=unusedFunction --suppress=*:*/libdeps/*
+    cppcheck: --std=c++11 --inline-suppr --suppress=noExplicitConstructor --suppress=unreadVariable --suppress=unusedFunction --suppress=*:*/libdeps/*
     clangtidy: --header-filter='' --checks=-*,clang-analyzer-*,performance-*,portability-*,readability-uppercase-literal-suffix,readability-redundant-control-flow --warnings-as-errors=-*,clang-analyzer-*,performance-*,portability-*,readability-uppercase-literal-suffix,readability-redundant-control-flow
 check_patterns =
     include
